--- a/src/main/resources/templates/th/main/chat.html
+++ b/src/main/resources/templates/th/main/chat.html
@@ -2,9 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>채팅</title>
 </head>
 <body>
-    <h1>Thymeleaf입니다.</h1>
+<h1>채팅</h1>
+
+
 </body>
 </html>
