--- a/src/main/resources/templates/th/main/storeBest.html
+++ b/src/main/resources/templates/th/main/storeBest.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="th/layout/defaultLayout">
 <head>
     <meta charset="UTF-8">
     <title>베스트상품</title>
+    <th:block layout:fragment="css">
+
+    </th:block>
 </head>
 <body>
 <h1>베스트상품</h1>
