--- a/src/main/resources/templates/th/main/storeBest.html
+++ b/src/main/resources/templates/th/main/storeBest.html
@@ -6,12 +6,35 @@
     <meta charset="UTF-8">
     <title>베스트상품</title>
     <th:block layout:fragment="css">
-
+        <link rel="stylesheet" th:href="@{/css/mainContent.css}">
+        <link rel="stylesheet" th:href="@{/css/storeBest.css}">
     </th:block>
 </head>
 <body>
-<h1>베스트상품</h1>
-
-
+<div layout:fragment="content">
+    <div class="container">
+        <div class="virtualized-list ranking-feed__content row"
+             style="padding-top: 0px; padding-bottom: 6844px; transform: translateY(0px);">
+            <div class="ranking-feed__item-wrap col-12 col-md-12 col-lg-3">
+                <div class="ranking-product-item__wrap">
+                    <div class="ranking-product-item__number-wrap ranking-product-item__number__medal ranking-product-item__number__gold-wrap">
+                        <span class="ranking-product-item__number ranking-product-item__number__gold">1</span>
+                    </div>
+                    <div class="production-item-image">
+                        <img class="image" alt="" src="" srcset="">
+                    </div>
+                    <div class="ranking-product-item__content">
+                        <h1 class="ranking-product-item__header">
+                            <span class="ranking-product-item__header__brand">상일리베가구</span>
+                            <span class="ranking-product-item__header__name">[기간한정] 아이언 행거형 드레스룸 4colors</span></h1>
+                            <span class="production-item-price">
+                                <span class="production-item-price__price">74,900</span>
+                            </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
