--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -2,9 +2,8 @@
 
 <div th:fragment="headerFragment">
     <header class="layout-navigation-bar">
-        <div data-sticky-enabled="false" data-sticky-always="true" data-direction="top" data-offset="0"
-             class="sticky-container layout-navigation-primary-wrap">
-            <div class="sticky-child layout-navigation-primary" style="position: relative;">
+        <div class="sticky-container layout-navigation-primary-wrap">
+            <div class="sticky-child layout-navigation-primary">
                 <div class="layout-navigation-primary__content">
                     <div class="layout-navigation-primary__leftmost">
                         <button class="layout-navigation-bar-icon layout-navigation-bar-drawer-button" title="메뉴"
@@ -15,8 +14,8 @@
                             </svg>
                         </button>
                     </div>
-                    <div class="layout-navigation-primary__left"><a
-                            class="layout-navigation-logo layout-navigation__bar__logo" aria-label="니가사는그집" href="/">
+                    <div class="layout-navigation-primary__left">
+                        <a class="layout-navigation-logo layout-navigation__bar__logo" aria-label="니가사는그집" href="/">
                         <img src="/img/theHouseLogo.png" class="icon" width="100" height="100"/></a>
                     </div>
                     <nav class="layout-navigation-primary__menu">
