--- a/src/main/resources/templates/th/admin/statAdmin/productSalesVolume.html
+++ b/src/main/resources/templates/th/admin/statAdmin/productSalesVolume.html
@@ -1,10 +1,349 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Insert title here</title>
+
 </head>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.2.js"></script>
+
+
+
+<!-- body@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+
 <body>
 
+<!-- 차트 div -->
+<!-- 차트 1 -->
+<div id = "name" style="width:100%; height:60px" >
+    <canvas id="myChart" style="width:10%; height:100%; float:left"></canvas>
+</div>
+<!-- 차트 2 -->
+<div id = "name2" style="width:100%; height:70px" >
+    <canvas id="myChart2" style="width:10%; height:100%; float:left" ></canvas>
+</div>
+<!-- 차트 3 -->
+<div name="myShow" style="width:100%; height:60px">
+    <canvas id="myChart3" style="width:10%; height:100%; float:left"></canvas>
+</div>
+
+<!-- 차트 div 끝 -->
+<!-- layer 버튼 시작 -->
+<!-- <button name = "myShow2" onclick=showHide2();> layer2 </button><br>  버튼 필요 없으면 삭제 예정-->
+<!-- <button name = "myShow3" onclick=showHide3();> layer3 </button> -->
+
+
+<div id="result"></div>
+<span th:text = "${jsonText}"></span>
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+/*Controller 에서
+ * ObjectMapper mapper = new ObjectMapper();
+ String jsonText = mapper.writeValueAsString( list );
+ model.addAttribute( "json", jsonText );
+ */-->
+
+<!--
+/*
+- Chart를 생성하면서,
+- ctx를 첫번째 argument로 넘겨주고,
+- 두번째 argument로 그림을 그릴때 필요한 요소들을 모두 넘겨줍니다.
+* 타입 종류 : bar, line, pie
+*/
+
+    /* function ajaxGraph(){
+    var checkboxValues = [];
+    $("input[name='hobby']:checked").each(function(i) {
+        checkboxValues.push($(this).val());
+    });
+
+    // 사용자 ID(문자열)와 체크박스 값들(배열)을 name/value 형태로 담는다.
+    //var allData = { "userId": userId, "checkArray": checkboxValues };
+     //
+
+     var abcd = {
+    		 [[id:1,pasw:2],[id:2,pasw:3], ]
+     }
+    $.ajax({
+        url:"goUrl.do",
+        type:'GET',
+        data: allData,
+        success:function(data){
+            alert("완료!");
+            window.opener.location.reload();
+            console.log(data);
+            abcd = data.d;
+
+            self.close();
+        },
+        error:function(jqXHR, textStatus, errorThrown){
+            alert("에러 발생~~ \n" + textStatus + " : " + errorThrown);
+            self.close();
+        }
+    });
+} */
+ -->
+
+
+
+
+
+<!-- 보여주기 감추기 -->
+<script>
+    function showHide2(){
+        if(document.getElementById("myChart2").style.display =='none'){
+            document.getElementById("myChart2").style.display ='block';
+        }
+        else{
+            document.getElementById("myChart2").style.display ='none';
+        }
+    }
+
+</script>
+
+<script>
+    function showHide3(){
+        if(document.getElementById("myChart3").style.display =='none'){
+            document.getElementById("myChart3").style.display ='block';
+        }
+        else{
+            document.getElementById("myChart3").style.display ='none';
+        }
+    }
+
+</script>
+
+<script th:inline="javascript">
+
+    var json = [[${jsonText}]];
+    var yearList = [[${yearList}]];
+    console.log("안녕하세요 yearList입니다 : " + yearList);
+    console.log(json);
+    var jsonParse = JSON.parse(json);
+    var chart1Arr = new Array();
+    var yearArr = new Array();
+    for(var i=0; i<jsonParse.length; i++){
+        chart1Arr[i] =jsonParse[i].productQty;
+        //yearArr[i] = jsonParse[i].productionDay;
+    }
+    console.log(chart1Arr +""+yearArr);
+
+
+    //var productArray2 = new Array(6);
+    //var chart1ProductArray = new Array(1,2,3,4,5,6);
+
+    // 공통 data
+    var backC = [
+        'rgba(54, 162, 235, 0.2)',
+        'rgba(54, 162, 235, 0.2)',
+        'rgba(54, 162, 235, 0.2)',
+        'rgba(54, 162, 235, 0.2)',
+        'rgba(54, 162, 235, 0.2)',
+        'rgba(54, 162, 235, 0.2)'
+    ];
+    //borderColor: backgroundColor:
+    var borderC = [
+        'rgba(54, 162, 235, 1)',
+        'rgba(54, 162, 235, 1)',
+        'rgba(54, 162, 235, 1)',
+        'rgba(54, 162, 235, 1)',
+        'rgba(54, 162, 235, 1)',
+        'rgba(54, 162, 235, 1)'
+    ];
+    var options = {
+        maintainAspectRatio: true, // default value. false일 경우 포함된 div의 크기에 맞춰서 그려짐.
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
+                }
+            }]
+        }
+    };
+
+    // 차트 data
+    var chart1Data = {
+        labels: yearList,
+        datasets: [{
+            label: 'product of Votes',
+            data: chart1Arr, // 판매량 1, 품목, 날짜 ==== 0507날짜의 판매량 1위~6위 품목
+            backgroundColor : backC,
+            borderColor : borderC,
+            borderWidth: 1
+        }]
+    };
+
+    var chart2Data = {
+        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+        datasets: [{
+            label: '# of Votes',
+            data: [1,2,3,4,5,6], // 판매량 1, 품목, 날짜 ==== 0507날짜의 판매량 1위~6위 품목
+            backgroundColor : backC,
+            borderColor : borderC,
+            borderWidth: 1
+        }]
+    };
+
+    var chart3Data = {
+        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+        datasets: [{
+            label: '# of Votes',
+            data: [11,22,33,44,55,66], // 판매량 1, 품목, 날짜 ==== 0507날짜의 판매량 1위~6위 품목
+            backgroundColor : backC,
+            borderColor : borderC,
+            borderWidth: 1
+        }]
+    };
+
+    // 1번째 차트 @@@@@@@@@@@@@@@@@@
+
+
+
+    $(document).ready(
+        function () {
+            var chart1Canvas = document.getElementById("myChart");
+            var ctx = chart1Canvas.getContext('2d');
+            var myNewChart = new Chart(ctx, {
+                type: 'bar',
+                data: chart1Data,
+                options: options
+            });
+
+            chart1Canvas.onclick = function(evt) {
+                if(document.getElementById("myChart2").style.display =='none'){
+                    document.getElementById("myChart2").style.display ='block';
+                }
+                else{
+                    document.getElementById("myChart2").style.display ='none';
+                }
+                var activePoints = myNewChart.getElementsAtEvent(evt); // aP선언
+
+                if (activePoints[0]) {
+                    var chartData = activePoints[0]['_chart'].config.data;
+                    var idx = activePoints[0]['_index'];
+
+                    var label = chartData.labels[idx];
+                    var value = chartData.datasets[0].data[idx];
+                    var labels = chartData.labels[idx];
+                    var form={
+                        quantity : value,
+                        year : label
+                    }
+                    console.log("quantity : " + value);
+                    console.log("year : " + label);
+                    $.ajax({
+                        //console.log("hi");
+                        url:"yearGraphAjax",
+                        type : "POST",
+                        data : form,
+                        success: function(data){
+                            $('#result').text(data);
+                        },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
+                        error: function(){
+                            alert("test err");
+                        }
+                    });
+
+
+                    //var url = "http://example.com/?label=" + label + "&value=" + value;
+                    //console.log(url);
+                    //alert(url);
+                    //location.replace(url);
+                }
+            };
+        }
+    );
+
+    //2번 차트@@@@@@@@@@
+
+    $(document).ready(
+        function(){
+            var chart2Canvas = document.getElementById("myChart2");
+            var ctx = chart2Canvas.getContext('2d');
+            var chart2 = new Chart(ctx, {
+                type: 'bar',
+                data: chart2Data,
+                options : options
+            });
+            chart2Canvas.onclick = function(evt) {
+                if(document.getElementById("myChart3").style.display =='none'){
+                    document.getElementById("myChart3").style.display ='block';
+                }
+                else{
+                    document.getElementById("myChart3").style.display ='none';
+                }
+
+                var activePoints = chart2.getElementsAtEvent(evt); // aP선언
+
+                if (activePoints[0]) {
+                    var chartData = activePoints[0]['_chart'].config.data;
+                    var idx = activePoints[0]['_index'];
+
+                    var label = chartData.labels[idx];
+                    var value = chartData.datasets[0].data[idx];
+
+                    var url = "http://example.com/?label=" + label + "&value=" + value;
+                    console.log(url);
+                    alert(url);
+                    //location.replace(url);
+                }
+            };
+        }
+    );
+
+    $(document).ready(
+        function(){
+            var chart3Canvas = document.getElementById("myChart3");
+            var ctx = chart3Canvas.getContext('2d');
+            var chart3 = new Chart(ctx, {
+                type: 'bar',
+                data: chart3Data,
+                options : options
+            });
+            chart3Canvas.onclick = function(evt) {
+                var activePoints = chart3.getElementsAtEvent(evt); // aP선언
+
+                if (activePoints[0]) {
+                    var chartData = activePoints[0]['_chart'].config.data;
+                    var idx = activePoints[0]['_index'];
+
+                    var label = chartData.labels[idx];
+                    var value = chartData.datasets[0].data[idx];
+
+                    var url = "http://example.com/?label=" + label + "&value=" + value;
+                    console.log(url);
+                    alert(url);
+                    //location.replace(url);
+                }
+            };
+        }
+    );
+
+    /*
+     make sure click was on an actual point
+if (activePoints.length > 0) {
+var clickedDatasetIndex = activePoints[0]._datasetIndex;
+var clickedElementindex = activePoints[0]._index;
+var label = myLine.data.labels[clickedElementindex];
+var value = myLine.data.datasets[clickedDatasetIndex].data[clickedElementindex];
+alert("Clicked: " + label + " - " + value);
+}
+    */
+</script>
+
 </html>
