--- a/src/main/resources/templates/th/member/basket/basket.html
+++ b/src/main/resources/templates/th/member/basket/basket.html
@@ -17,17 +17,6 @@
 
 <div data-react-class="App" data-hydrate="t" class="page">
     <div class="layout">
-        <div class="layout-top-banner">
-            <div class="layout-top-banner-pc">
-                <div class="layout-top-banner-pc__content"></div>
-                <button class="layout-top-banner-pc__close" type="button" aria-label="닫기">
-                    <svg class="icon" width="24" height="24" fill="currentColor" viewBox="0 0 24 24"
-                         preserveAspectRatio="xMidYMid meet">
-                        <path d="M12 11.3l8.13-8.14.7.7L12.72 12l8.13 8.13-.7.7L12 12.72l-8.13 8.13-.7-.7L11.28 12 3.16 3.87l.7-.71L12 11.29z"></path>
-                    </svg>
-                </button>
-            </div>
-        </div>
         <header class="layout-navigation-bar">
             <div data-sticky-enabled="true" data-sticky-always="true" data-direction="top" data-offset="0"
                  class="sticky-container layout-navigation-primary-wrap" style="height: 80.9943px;">
@@ -132,23 +121,32 @@
                         <div class="commerce-cart__content">
                             <div data-sticky-enabled="false" data-sticky-always="false" data-direction="top"
                                  data-offset="0" class="sticky-container commerce-cart__header-wrap">
-                                <div class="sticky-child commerce-cart__header" style="position:relative"><span
-                                        class="commerce-cart__header__left"><div
-                                        class="round-checkbox-input round-checkbox-input--blue"><label
-                                        class="round-checkbox-input__label"><input type="checkbox"
-                                                                                   class="round-checkbox-input__input"
-                                                                                   checked="" autocomplete="off"><span
-                                        class="round-checkbox-input__icon"><svg class="check" width="24" height="24"
-                                                                                viewBox="0 0 24 24"
-                                                                                preserveAspectRatio="xMidYMid meet"><path
-                                        fill="#FFF"
-                                        d="M9.9 14.6l7-7.3 1.5 1.4-8.4 8.7-5-4.6 1.4-1.5z"></path></svg></span><span
-                                        class="caption">모두선택 (1개)</span></label></div></span><span
-                                        class="commerce-cart__header__right"><button
-                                        class="commerce-cart__header__delete" type="button">선택삭제</button></span></div>
+                                <div class="sticky-child commerce-cart__header" style="position:relative">
+                                    <span
+                                        class="commerce-cart__header__left">
+                                       <div  class="round-checkbox-input round-checkbox-input--blue">
+                                            <label class="round-checkbox-input__label">
+                             <!--모두선택체크박스--><input type="checkbox" id="outerCheckbox" class="round-checkbox-input__input" checked="" autocomplete="off">
+                                                <span   class="round-checkbox-input__icon">
+                                                    <svg class="check" width="24" height="24"  viewBox="0 0 24 24"  preserveAspectRatio="xMidYMid meet">
+                                                        <path fill="#FFF"  d="M9.9 14.6l7-7.3 1.5 1.4-8.4 8.7-5-4.6 1.4-1.5z">
+
+                                                        </path>
+                                                    </svg>
+                                                </span>
+                                                <span class="caption">모두선택 (1개)
+                                                </span>
+                                            </label>
+                                        </div>
+                                    </span>
+                                    <span  class="commerce-cart__header__right">
+                                        <button  class="commerce-cart__header__delete" type="button">선택삭제
+                                        </button>
+                                    </span>
+                                </div>
                             </div>
-                            <ul class="commerce-cart__content__group-list">
-                                <li class="commerce-cart__content__group-item">
+            <!-- 상품 전체 --><ul class="commerce-cart__content__group-list">
+              <!-- 상품 한개당 li 한개--> <li class="commerce-cart__content__group-item">
                                     <article class="commerce-cart__group"><h1 class="commerce-cart__group__header">핀란디아
                                         <!-- --> 배송</h1>
                                         <ul class="commerce-cart__group__item-list">
@@ -156,30 +154,26 @@
                                                 <article class="commerce-cart__delivery-group">
                                                     <ul class="commerce-cart__delivery-group__product-list">
                                                         <li class="commerce-cart__delivery-group__product-item">
-                                                            <article class="carted-product">
+                                             <!-- 선택된 상품 in basket --><article class="carted-product">
                                                                 <div class="round-checkbox-input round-checkbox-input--blue carted-product__select">
-                                                                    <label class="round-checkbox-input__label"><input
-                                                                            type="checkbox"
-                                                                            class="round-checkbox-input__input"
-                                                                            checked=""
-                                                                            aria-label="[오늘의딜] 데이브 화이트/블랙 메쉬 책상의자 5colors 선택"
-                                                                            autocomplete="off"><span
-                                                                            class="round-checkbox-input__icon"><svg
-                                                                            class="check" width="24" height="24"
-                                                                            viewBox="0 0 24 24"
-                                                                            preserveAspectRatio="xMidYMid meet"><path
-                                                                            fill="#FFF"
-                                                                            d="M9.9 14.6l7-7.3 1.5 1.4-8.4 8.7-5-4.6 1.4-1.5z"></path></svg></span></label>
+                                                                    <label class="round-checkbox-input__label">
+                                                  <!-- 내부 체크박스 --><input type="checkbox" id="innerCheckbox" class="round-checkbox-input__input" checked=""  aria-label="[오늘의딜] 데이브 화이트/블랙 메쉬 책상의자 5colors ${productName}"
+                                                                            autocomplete="off">
+                                                                        <span class="round-checkbox-input__icon">
+                                                                            <svg class="check" width="24" height="24" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet">
+                                                                                <path fill="#FFF"  d="M9.9 14.6l7-7.3 1.5 1.4-8.4 8.7-5-4.6 1.4-1.5z"></path>
+                                                                            </svg>  <!-- 1. outer 체크박스 체크 ? inner 체크박스 == true -->
+                                                                        </span>
+                                                                    </label>
                                                                 </div>
-                                                                <a class="product-small-item product-small-item--clickable"
+                                            <!-- 상품 간단 상세 --><a class="product-small-item product-small-item--clickable"
                                                                    href="/productions/41033/selling">
                                                                     <div class="product-small-item__image"><img
                                                                             src="https://image.ohou.se/i/bucketplace-v2-development/uploads/productions/157914764126978238.jpg?gif=1&amp;w=240&amp;h=240&amp;c=c"
-                                                                            srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/productions/157914764126978238.jpg?gif=1&amp;w=360&amp;h=360&amp;c=c 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/productions/157914764126978238.jpg?gif=1&amp;w=480&amp;h=480&amp;c=c 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/productions/157914764126978238.jpg?gif=1&amp;w=720&amp;h=720&amp;c=c 3x"
                                                                             alt=""></div>
                                                                     <div class="product-small-item__content"><h1
                                                                             class="product-small-item__title">[핀란디아]
-                                                                        <!-- -->[오늘의딜] 데이브 화이트/블랙 메쉬 책상의자 5colors</h1>
+                                                                        <!-- -->데이브 화이트/블랙 메쉬 책상의자 </h1>
                                                                         <p class="product-small-item__caption">무료배송 |
                                                                             일반택배</p></div>
                                                                 </a>
@@ -195,18 +189,8 @@
                                                                 <ul class="carted-product__option-list">
                                                                     <li class="carted-product__option-list__item">
                                                                         <article class="selling-option-item"><h2
-                                                                                class="selling-option-item__name">프레임컬러:
-                                                                            블랙 / 패브릭컬러: 그린</h2>
-                                                                            <button class="selling-option-item__delete"
-                                                                                    type="button" aria-label="삭제">
-                                                                                <svg width="12" height="12"
-                                                                                     viewBox="0 0 12 12"
-                                                                                     fill="currentColor"
-                                                                                     preserveAspectRatio="xMidYMid meet">
-                                                                                    <path fill-rule="nonzero"
-                                                                                          d="M6 4.6L10.3.3l1.4 1.4L7.4 6l4.3 4.3-1.4 1.4L6 7.4l-4.3 4.3-1.4-1.4L4.6 6 .3 1.7 1.7.3 6 4.6z"></path>
-                                                                                </svg>
-                                                                            </button>
+                                                                                class="selling-option-item__name">컬러 : 그린</h2>
+
                                                                             <div class="selling-option-item__controls">
                                                                                 <div class="selling-option-item__quantity">
                                                                                     <div class="input-group select-input option-count-input">
@@ -240,13 +224,7 @@
                                                                         </article>
                                                                     </li>
                                                                 </ul>
-                                                                <div class="carted-product__footer"><span
-                                                                        class="carted-product__footer__left"><button
-                                                                        class="carted-product__edit-btn" type="button">옵션변경</button><button
-                                                                        class="carted-product__order-btn" type="button">바로구매</button></span><span
-                                                                        class="carted-product__subtotal"><span
-                                                                        class="carted-product__subtotal__number">55,900</span>원</span>
-                                                                </div>
+
                                                             </article>
                                                         </li>
                                                     </ul>
@@ -254,7 +232,7 @@
                                                             class="commerce-cart__delivery-group__total">배송비<!-- -->
                                                         무료</p></footer>
                                                 </article>
-                                            </li>
+                                            </li><!-- 상품 LI 끝 -->
                                         </ul>
                                     </article>
                                 </li>
@@ -262,7 +240,7 @@
 
                         </div>
                     </div>
-                    <div class="commerce-cart__side-bar-wrap col-12 col-md-5 col-lg-4">
+                    <div class="commerce-cart__side-bar-wrap col-12 col-md-5 col-lg-4"> <!--사이드바 전체 상품 가격 등 정보-->
                         <div data-sticky-enabled="false" data-sticky-always="false" data-direction="top"
                              data-offset="80.99431610107422" class="sticky-container commerce-cart__side-bar-container"
                              style="position: sticky; top: 80.9943px;">
@@ -357,7 +335,7 @@ $ajax.
 : /basketProcess.do ~~~~~
 <basketMapper class="insert"></basketMapper>
 }
-(회원) 장바구니 아이콘 누르면 popup (db에 품목 저장) ||장바구니로||계속쇼핑||
+(회원) 장바구니 아이콘 누르면 popup (db에 품목 저장) ||장바구니로||계속쇼핑||  -->>> Product Mapperㅔㅇㅇ ㅣㅆ음
 (비회원) 장바구니 아이콘 누르면 popup (세션에 품목 저장) ||장바구니로||계속쇼핑||
 
 
@@ -366,7 +344,11 @@ for(var key in window.sessionStorage) {
 sessionStorage.getItem(key) }
 ~~~ data : list ~~
 }
-
+ProductDetail ---> (세션 있다 없다, 유저Id 있다 없다)
+1. 유저 ID 있다 --> COntroller에서 장바구니 정보 가져옴
+    Session에서 MemId 가져와서 Controoller에 보낸 뒤 정보 가져옴
+2. 유저 ID 없다 SEssion에서 장바구니 정보 가져옴 popup -- BasketController --> basket
+    Session에서 장바구니 리스트 뽑아와서 가져옴
 @@Controller@@
 
 if(memberId == null{
@@ -378,7 +360,14 @@ getAllProduct(name)
 }
 
 장바구니 페이지
-
+실험용 -- db
+<tr th:each="val, valStat : ${allMemberVOList} ">
+    <td th:text="${valStat.count}">1</td>
+    <td th:text="${val.id}"></td>
+    <td th:text="${val.pw}"></td>
+    <td th:text="${val.roleType}"></td>
+    <td th:text="${val.socialType}"></td>
+</tr>
 <div id="output">
     <!-- 저장된 내용을 출력할 DIV 엘리먼트 -->
 </div>
@@ -451,6 +440,8 @@ getAllProduct(name)
             }
         }
     );
+
+
 </script>
 </body>
 </html>
