--- a/src/main/resources/templates/th/customLogin.html
+++ b/src/main/resources/templates/th/customLogin.html
@@ -11,10 +11,26 @@
 </head>
 
 <body>
-<div class="container" style="text-align: center;">
 
 
-    <div>
+    <form method='post' th:action="@{/login}">
+
+        <div>
+            USERNAME: <input type='text' name='username'>
+        </div>
+        <div>
+            PASSWORD: <input type='password' name='password'>
+        </div>
+        <div>
+
+            <div>
+                <input type='submit'>
+            </div>
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+        </div>
+    </form>
+
+    <div class="container" style="text-align: center;">
 
         <h2>소셜로그인</h2><br/><br/>
 
@@ -30,17 +46,6 @@
         location.href="/oauth2/authorization/"+socialType;
     });
 </script>
-
-
-<!--<script>-->
-<!--    let socials = document.getElementsByClassName("btn_social");-->
-<!--    for (let social of socials) {-->
-<!--        social.addEventListener('click', function () {-->
-<!--            let socialType = this.getAttribute('data-social');-->
-<!--            location.href = "/oauth2/authorization/" + socialType;-->
-<!--        })-->
-<!--    }-->
-<!--</script>-->
 
 </body>
 </html>
