--- a/src/main/resources/templates/th/member/payment/payment.html
+++ b/src/main/resources/templates/th/member/payment/payment.html
@@ -5,43 +5,24 @@
     <title>Title</title>
     <link rel="stylesheet" media="screen"
           href="https://d1nyaccf3kuclt.cloudfront.net/assets/v3/layout/application_react-c68374e516e05258989e1c408ec53ff0ffa468ef1755a945c31caf2e365af3d0.css">
-    <link rel="stylesheet" media="all" href="https://d1nyaccf3kuclt.cloudfront.net/assets/v3/components/modal-f0d0d6d3de7c6af277cedf14e63e81f35de21fddb39c29158ee5240d6ef4698a.css">
-    <link rel="stylesheet" media="all" href="https://d1nyaccf3kuclt.cloudfront.net/assets/v3/components/modal/unsigned_expert_promotion-84289ae4552836c376b20eb6af913e1d218288f49b558b3c640514dc7391136f.css">
-    <link rel="stylesheet" media="all" href="https://d1nyaccf3kuclt.cloudfront.net/assets/v3/components/autocomplete-b90e5093fd6272bf968b24073411e196f032d826a99ce7c79f61f975b6cfef98.css">
-    <link rel="stylesheet" media="all" href="https://d1nyaccf3kuclt.cloudfront.net/assets/v3/bucket_ui/_form-3b5b9d2d1ff7c1d9811e26f6f505c864ab580fd490ea13dcd8d9e9f2df445892.css">
-    <link rel="stylesheet" media="all" href="https://d1nyaccf3kuclt.cloudfront.net/assets/v2/application-024dde458f1e1f173331c725f849a32c4665049bf506aff35bde5fa7cf0f6ff8.css">
-    <link rel="stylesheet" media="all" href="https://d1nyaccf3kuclt.cloudfront.net/assets/v3/bucket_ui/bucket-icons-666f525bc684b3218656f27b690456c21b5f2dead1e01573259a2a5dd0614170.css">
-    <link href="/css/7.css" rel="stylesheet">
-    <link href="/css/8.css" rel="stylesheet">
-    <link href="/css/LayoutFooter-52bc8169.css" rel="stylesheet">
-    <link href="/css/LayoutNavigation-895d459b.css" rel="stylesheet">
+    <link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/7-e75c67c6.chunk.css">
+    <link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/19-dfb1ddc9.chunk.css">
+    <link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/App-11020a1b.css">
+    <link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/16-82708389.chunk.css">
+    <link rel="stylesheet" media="screen"
+          href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/templates-Commerce-Cart-7a3e77c9.chunk.css">
+    <link rel="stylesheet" media="all" href="https://d1nyaccf3kuclt.cloudfront.net/assets/v2/orders/pre_order-a9341d94d054b478694e31b559c91d4c6f9004f1819d278a88456fa32578bff9.css">
 
 </head>
 <body>
+
 <div class="sticky-child layout-navigation-primary" style="position: fixed; left: 0px; right: 0px; top: 0px;"><div class="layout-navigation-primary__content"><div class="layout-navigation-primary__leftmost"><button class="layout-navigation-bar-icon layout-navigation-bar-drawer-button" title="메뉴" aria-label="메뉴" type="button"><svg class="icon" width="24" height="24" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet"><path fill="currentColor" d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"></path></svg></button></div><div class="layout-navigation-primary__left"><a class="layout-navigation-logo layout-navigation__bar__logo" aria-label="오늘의집" href="/"><svg class="icon" width="74" height="30" viewBox="0 0 74 30" preserveAspectRatio="xMidYMid meet"><g fill="none" fill-rule="evenodd"><path fill="#000" d="M14.2 25.17H9.28V20.7a1.45 1.45 0 0 0-2.9 0v4.47H1.44a1.45 1.45 0 1 0 0 2.9H14.2a1.45 1.45 0 0 0 0-2.9M4.5 9.15c0-4.6 2.08-5.28 3.33-5.28 1.24 0 3.33.69 3.33 5.28v.36c0 4.6-2.09 5.28-3.33 5.28-1.25 0-3.34-.69-3.34-5.28v-.36zm3.33 8.54c3.84 0 6.23-3.13 6.23-8.18v-.36c0-5.05-2.39-8.18-6.23-8.18-3.85 0-6.24 3.13-6.24 8.18v.36c0 5.05 2.39 8.19 6.24 8.19zm25.54-7.34H17.81a1.45 1.45 0 0 0 0 2.9h15.56a1.45 1.45 0 1 0 0-2.9m-1.55 15.5c-7.08 1.83-9.45.79-10.14.25-.45-.35-.65-.8-.65-1.48v-.87h10.25c.8 0 1.46-.65 1.46-1.45v-5.08c0-.8-.66-1.45-1.46-1.45h-11.7a1.45 1.45 0 1 0 0 2.9h10.25v2.18H19.57c-.8 0-1.45.65-1.45 1.45v2.32a4.6 4.6 0 0 0 1.78 3.78c1.2.93 2.94 1.39 5.21 1.39 2.05 0 4.54-.38 7.44-1.13a1.45 1.45 0 1 0-.73-2.82M20.3 7.83h10.8a1.45 1.45 0 1 0 0-2.9h-9.35V1.45a1.45 1.45 0 1 0-2.9 0v4.93c0 .8.65 1.45 1.45 1.45"></path><rect width="3" height="15" x="70" fill="#000" rx="1.5"></rect><path fill="#000" d="M64.5 13.28a1.45 1.45 0 0 0 2.73-1c-.05-.13-1-2.68-3.38-4.5l3.7-4.1a1.45 1.45 0 0 0-1.09-2.42h-9.05a1.45 1.45 0 1 0 0 2.9h5.8l-6.88 7.64a1.45 1.45 0 1 0 2.16 1.95l3.41-3.8a8 8 0 0 1 2.6 3.33M69.56 26.52h-7.01a.82.82 0 0 1-.82-.82v-1.95h8.65v1.95c0 .45-.37.82-.82.82m2.27-9.37c-.8 0-1.45.65-1.45 1.45v2.25h-8.65V18.6a1.45 1.45 0 1 0-2.9 0v7.1a3.73 3.73 0 0 0 3.72 3.72h7.01a3.73 3.73 0 0 0 3.72-3.72v-7.1c0-.8-.65-1.45-1.45-1.45M42.46 3.87c2.22 0 2.33 4.24 2.33 5.08 0 .85-.11 5.09-2.33 5.09-2.21 0-2.32-4.24-2.32-5.08 0-.86.11-5.09 2.32-5.09m0 13.07c1.76 0 3.23-.93 4.14-2.62.71-1.34 1.1-3.2 1.1-5.36s-.39-4.02-1.1-5.37A4.6 4.6 0 0 0 42.46.97c-1.76 0-3.22.93-4.13 2.62-.72 1.35-1.1 3.2-1.1 5.37s.38 4.01 1.1 5.36a4.59 4.59 0 0 0 4.13 2.62"></path><path fill="#000" d="M51.4.49c-.8 0-1.45.65-1.45 1.45v17.78c-1.93.6-5.75 1.13-10.38 1.13h-2.2a1.45 1.45 0 0 0 0 2.9h2.2c2.64 0 7.21-.23 10.38-1.02v4.84a1.45 1.45 0 0 0 2.9 0V1.94c0-.8-.65-1.45-1.45-1.45"></path></g></svg></a></div><nav class="layout-navigation-primary__menu"><a class="layout-navigation-primary__menu__item" href="/">커뮤니티</a><a class="layout-navigation-primary__menu__item" href="/store">스토어</a><a class="layout-navigation-primary__menu__item" href="/experts">인테리어시공</a></nav><div class="layout-navigation-primary__right"><div class="layout-navigation-bar-search"><div class="layout-navigation-search" id="id-1"><div class="layout-navigation-search__header"><div id="id-1-combobox" class="layout-navigation-search__combobox" role="combobox" aria-haspopup="listbox" aria-expanded="false"><div class="layout-navigation-search__input"><input type="text" class="layout-navigation-search__input__text" value="" autocomplete="off" size="1" id="id-1-input" aria-autocomplete="list" placeholder="오늘의집 통합검색" aria-label="오늘의집 통합검색"><svg class="layout-navigation-search__input__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" preserveAspectRatio="xMidYMid meet"><path d="M22 22l-5-5"></path><circle cx="11" cy="11" r="8"></circle></svg></div></div></div></div></div><a class="layout-navigation-bar-upload-button" href="/upload_select">글쓰기</a><button class="layout-navigation-bar-icon layout-navigation-bar-search-button" title="검색" aria-label="검색" type="button"><svg class="icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" preserveAspectRatio="xMidYMid meet"><path d="M22 22l-5-5"></path><circle cx="11" cy="11" r="8"></circle></svg></button><a class="layout-navigation-bar-icon" title="장바구니" aria-label="장바구니" href="/cart"><svg class="icon" width="24" height="24" viewBox="0 0 24 24" stroke="currentColor" fill="none" stroke-linejoin="round" stroke-width="2" preserveAspectRatio="xMidYMid meet"><path stroke-linecap="round" d="M4 5h18l-2.6 10.5a2 2 0 0 1-2 1.5H8.6a2 2 0 0 1-2-1.5L4 5zm4 15.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0zm7 0a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0z"></path><path d="M1 2h3v3"></path></svg><span class="layout-navigation-bar-icon__ticker">1</span></a><div class="layout-navigation-bar-login"><a class="layout-navigation-bar-login__item" href="/users/sign_in?redirect_to=%2Forders%2Fpre_order">로그인</a><a class="layout-navigation-bar-login__item" href="/normal_users/new">회원가입</a></div></div></div></div>
 
 <div id="body" class="orders pre_order" data-s_id="ad223c51bbde2a256a849d25cbb9b308" style="padding-bottom: 0px;">
 
     <div data-pre_order="{&quot;pre_order&quot;:{&quot;from&quot;:&quot;bucket&quot;,&quot;bucket&quot;:[&quot;53293825&quot;]},&quot;utf8&quot;:&quot;✓&quot;,&quot;controller&quot;:&quot;orders&quot;,&quot;action&quot;:&quot;pre_order&quot;}" id="pre_order_json" data-is_app="false"></div>
 
-    <script>
-        (function () {
-            if (window.fbq != null) {
-                window.fbq('track', 'InitiateCheckout');
-            }
-        })();
 
-        function gtmHelper(step, option) {
-            gtmCheckout([{"id":41033,"name":"[오늘의딜] 데이브 화이트/블랙 메쉬 책상의자 5colors","selling_cost":55900,"brand_name":"핀란디아","main_category":2,"sub_category":2,"variant":"프레임컬러: 블랙 / 패브릭컬러: 그린","quantity":1,"current_shard":"master"}], step, option);
-        }
-
-        if (getCookie('checkout_method') === "") {
-            gtmHelper(1, '비회원주문');
-        } else {
-            gtmHelper(1, getCookie('checkout_method'));
-            setCookie('checkout_method', '', -1);
-        }
-    </script>
 <!--
     <div id="layer" style="display:none;position:fixed;overflow:hidden;z-index:10000;-webkit-overflow-scrolling:touch;">
         <img src="//i1.daumcdn.net/localimg/localimages/07/postcode/320/close.png" id="btnCloseLayer" style="cursor:pointer;position:absolute;right:-3px;top:-3px;z-index:1" alt="닫기 버튼">
@@ -56,7 +37,7 @@
             <div class="current-user__blank">
                 <p class="current-user__blank__text">
                     비회원은 쿠폰 &amp; 포인트 혜택을 받을 수 없습니다.<br>
-                    회원가입하고 다양한 혜택과 첫구매쿠폰을 받으세요.
+                    회원가입하고 다양한 혜택을 받으세요.
                 </p>
                 <a class="current-user__blank__btn" href="/normal_users/new">
                     오늘의집 회원가입하기<span class="arrow-right-icon"></span>
@@ -70,7 +51,7 @@
                     <tr class="production" data-id="41033" data-cost="55900" data-count="1" data-name="[핀란디아] [오늘의딜] 데이브 화이트/블랙 메쉬 책상의자 5colors">
                         <td>
                             <div class="information">
-                                <img src="https://image.ohou.se/image/central_crop/bucketplace-v2-development/uploads-productions-157914764126978238.jpg/320/320" alt="320">
+                                <img src="" alt="320">
                                 <div>
                                     <div class="name">[핀란디아] [오늘의딜] 데이브 화이트/블랙 메쉬 책상의자 5colors</div>
                                     <div class="option">프레임컬러: 블랙 / 패브릭컬러: 그린</div>
@@ -122,16 +103,14 @@
                     <div class="field">
                         <div class="label">주소</div>
                         <div class="input vertical">
-                            <input presence="true" readonly="readonly" class="non_edit full" value="" data-hj-suppress="" type="text" name="order[received_at]" id="order_received_at">
-                            <input presence="true" value="" autocomplete="off" data-hj-suppress="" class="full" type="text" name="order[received_at_detail]" id="order_received_at_detail">
-                            <input presence="true" value="" data-hj-suppress="" class="full" type="hidden" name="order[received_at_sido]" id="order_received_at_sido">
-                            <input presence="true" value="" data-hj-suppress="" class="full" type="hidden" name="order[received_at_post_code6]" id="order_received_at_post_code6">
+                            <input  readonly="readonly" class="non_edit full" value="" data-hj-suppress="" type="text" name="order[received_at]" id="order_received_at">
+                            <input  value="" autocomplete="off" data-hj-suppress="" class="full" type="text" name="order[received_at_detail]" id="order_received_at_detail">
                         </div>
                     </div>
                     <div class="field">
                         <div class="label">휴대전화</div>
                         <div class="input phone">
-                            <input presence="true" data-hj-suppress="" type="text" name="order[received_phone_number]" id="order_received_phone_number">
+                            <input type="text" name="order[received_phone_number]" id="order_received_phone_number">
                         </div>
                     </div>
                     <div class="field">
@@ -161,13 +140,15 @@
             <div class="panel">
                 <div class="title">
                     <div class="title">주문자</div>
-                    <div class="button" id="copy_delivery">배송지 정보와 동일하게 채우기</div>
+                    <input type="checkbox" id="copy_delivery"  onclick="ShipToBill(this.form);">배송지 정보와 동일하게</input>
+                    <span> &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
+                   <input type="checkbox" id="addrCheckbox" class="addrCheckbox" >&nbsp;배송지 저장하기</input>
                 </div>
                 <div class="input">
                     <div class="field">
                         <div class="label">이름</div>
                         <div class="input">
-                            <input presence="true" value="" autocomplete="off" data-hj-suppress="" class="half" type="text" name="order[payer_name]" id="order_payer_name">
+                            <input autocomplete="off" data-hj-suppress="" class="half" type="text" name="order[payer_name]" id="order_payer_name">
                         </div>
                     </div>
                     <div class="field">
@@ -183,7 +164,7 @@
                             <div id="verified_phone_number">
                                 <div class="verified_phone_number" data-value="" data-verified=""></div>
                                 <div class="need_verified">
-                                    <div id="do_verified_phone_number">인증받기</div>
+
                                     <div id="verified_inputs" style="display: none;">
                                         <input id="verified_input" class="donot_check_before_payment" placeholder="인증번호" autocomplete="off" type="text" data-hj-suppress="" size="6">
                                         <div id="check_verified">확인</div>
@@ -241,21 +222,6 @@
                     </div>
                 </div>
 
-                <input type="hidden" name="order[imp_uid]" id="order_imp_uid">
-                <input type="hidden" name="order[apply_number]" id="order_apply_number">
-                <input type="hidden" name="order[receipt_url]" id="order_receipt_url">
-                <input type="hidden" value="bp_p00000000_000023159872" name="order[merchant_uid]" id="order_merchant_uid">
-                <input type="hidden" name="order[vbank_num]" id="order_vbank_num">
-                <input type="hidden" name="order[vbank_name]" id="order_vbank_name">
-                <input type="hidden" name="order[vbank_holder]" id="order_vbank_holder">
-                <input type="hidden" name="order[vbank_date]" id="order_vbank_date">
-                <input type="hidden" value="0" name="order[real_pay_cost]" id="order_real_pay_cost">
-                <input type="hidden" value="0" name="order[delivery_cost]" id="order_delivery_cost">
-                <input value="0" type="hidden" name="order[mileage_cost]" id="order_mileage_cost">
-                <input value="0" type="hidden" name="order[coupon_cost]" id="order_coupon_cost">
-                <input type="hidden" value="Web" name="order[os_type]" id="order_os_type">
-                <input type="hidden" name="coupon_id" id="coupon_id" value="0">
-                <input type="hidden" value="true" name="order[from_cart]" id="order_from_cart">
             </div>
 
             <div class="panel">
@@ -310,5 +276,31 @@
 
 
 </div>
+<script>
+    //모두 체크하기
+    var name = "";
+    function InitValue(frm){
+
+        name = frm.order_payer_name.value;
+    }
+    function ShipToBill(frm){
+        var n = null;
+        if(frm.copy_delivery.checked){
+
+            InitValue(frm);			//현재 텍스트박스와 체크박스의 상태유지
+
+            document.getElementById("order_payer_name").value = document.getElementById("order_recipient").value;
+
+
+        }else{						//체크박스를 해제한다면
+
+            frm.order_payer_name.value=name;
+
+        }
+        if(!frm.copy_delivery.checked){
+            document.getElementById("order_recipient").value = "삭제됨";
+        }
+    }
+</script>
 </body>
 </html>
